[metadata]
name = easykube-runtime
description = Runtime for writing Kubernetes controllers using easykube.
long_description = file: README.md
author = Matt Pryor
author_email = matt.pryor@nscale.com
url = https://github.com/mkjpryor/easykube-runtime


[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    easykube
